--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "expo": "~51.0.11",
+    "expo-av": "^14.0.5",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.15",
@@ -17,6 +18,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.4.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
